styling: change floating balls colour + fix mobile layout bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,3 @@ body {
   margin: 0;
   scroll-behavior: smooth;
 }
-
-main {
-  display: flex;
-  flex-direction: column;
-}
